[gd_scene load_steps=5 format=3 uid="uid://bx8mgt5cygdex"]

[ext_resource type="Script" path="res://user_interfaces/settings/display/display.gd" id="1_sqi7k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7yyg"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 32.0
expand_margin_top = 32.0
expand_margin_right = 32.0
expand_margin_bottom = 32.0

[sub_resource type="LabelSettings" id="LabelSettings_81st7"]
font_size = 64
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gxynq"]
font_size = 32
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqi7k")

[node name="MenuPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w7yyg")

[node name="DisplayVBC" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Title" type="Label" parent="MenuPanel/DisplayVBC"]
layout_mode = 2
text = "Display"
label_settings = SubResource("LabelSettings_81st7")
horizontal_alignment = 1

[node name="Resolution" type="HBoxContainer" parent="MenuPanel/DisplayVBC"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MenuPanel/DisplayVBC/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"
label_settings = SubResource("LabelSettings_gxynq")

[node name="OptionButton" type="OptionButton" parent="MenuPanel/DisplayVBC/Resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="HBoxContainer" parent="MenuPanel/DisplayVBC"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MenuPanel/DisplayVBC/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen"
label_settings = SubResource("LabelSettings_gxynq")

[node name="CheckBox" type="CheckBox" parent="MenuPanel/DisplayVBC/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 9

[node name="Borderless" type="HBoxContainer" parent="MenuPanel/DisplayVBC"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MenuPanel/DisplayVBC/Borderless"]
layout_mode = 2
size_flags_horizontal = 3
text = "Borderless"
label_settings = SubResource("LabelSettings_gxynq")

[node name="CheckBox" type="CheckBox" parent="MenuPanel/DisplayVBC/Borderless"]
layout_mode = 2
size_flags_horizontal = 9

[node name="Back" type="Button" parent="MenuPanel/DisplayVBC"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 8
text = "Back"

[connection signal="item_selected" from="MenuPanel/DisplayVBC/Resolution/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="MenuPanel/DisplayVBC/Fullscreen/CheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="toggled" from="MenuPanel/DisplayVBC/Borderless/CheckBox" to="." method="_on_borderless_check_box_toggled"]
[connection signal="pressed" from="MenuPanel/DisplayVBC/Back" to="." method="_on_back_pressed"]
